# SoundSense

./: .gitignore  LICENSE  LICENSE.txt  README.md  README_TR.md  SoundSense.iss
SoundSenseCpp/: AudioAnalyzer.hpp  CMakeLists.txt  GameSenseClient.hpp  README.md  SerialPort.hpp  crash_report.txt  main.cpp  qml.qrc
SoundSenseCpp/archive/: launcher.cpp
SoundSenseCpp/installer/: .soundsense.iss
SoundSenseCpp/plugins/scenes/: README.txt
SoundSenseCpp/plugins/source/: ClockPlugin.cpp  InvertPlugin.cpp
SoundSenseCpp/presets/: README.txt
SoundSenseCpp/qml/: Main.qml  SceneEditorView.qml
SoundSenseCpp/qml/components/: SsButton.qml  SsCard.qml  SsComboBox.qml  SsInput.qml  SsSlider.qml  SsSwitch.qml  SsTextField.qml
SoundSenseCpp/scripts/: flash_firmware.bat
SoundSenseCpp/src/core/: AudioAnalyzer.cpp  AudioAnalyzer.hpp  Globals.cpp  Globals.hpp  LFO.hpp  PresetManager.cpp  PresetManager.hpp  Renderer.cpp  Renderer.hpp  Settings.cpp  Settings.hpp  TriggerSystem.cpp  TriggerSystem.hpp  logo.cpp  logo.hpp
SoundSenseCpp/src/core/widgets/: ClockWidget.hpp  ImageWidget.hpp  RectWidget.hpp  TextWidget.hpp  VisualizerWidget.hpp  WaveformWidget.hpp  Widget.hpp
SoundSenseCpp/src/hardware/: SerialPort.cpp  SerialPort.hpp
SoundSenseCpp/src/network/: GameSenseClient.cpp  GameSenseClient.hpp
SoundSenseCpp/src/plugins/: JsonPlugin.cpp  JsonPlugin.hpp  PluginManager.cpp  PluginManager.hpp  Scene.cpp  Scene.hpp
SoundSenseCpp/src/plugins/SoundSenseSDK/: README.md  SoundSenseSDK.hpp  build_plugin.bat
SoundSenseCpp/src/ui/: BackendContext.cpp  BackendContext.hpp  LivePreviewItem.cpp  LivePreviewItem.hpp  PluginModel.cpp  PluginModel.hpp  PresetModel.cpp  PresetModel.hpp  SceneModel.cpp  SceneModel.hpp  main.cpp
SoundSense_ESP32/: SoundSense_ESP32.ino  bitmap.h  (+1 more)
(+6 files in other folders)
